Update link to lemons.html in index.html
Updated the hyperlink in index.html to point to the correct page lemons.html
This ensures proper navigation and avoids broken links.  
Tested the change to confirm the link works as expected.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Dishes</h1>
     <p><a href="lasagna.html">Spicy Mushroom Lasagna</a></p>
-    <p><a href="preserved-lemons.html">Preserved Lemons</a></p>
+    <p><a href="lemons.html">Preserved Lemons</a></p>
     <p><a href="squash.html">Butternut Squash "Carbonara"</a></p>
 </body>
 </html>
