Fiy typo in lemons.html
Corrected a typo in lemons.html 
This improves readability and clarity in the document.  
No functional changes were made.

--- a/lemons.html
+++ b/lemons.html
@@ -15,7 +15,7 @@
 
 <p><h2>Ingredients</h2></p>
 <p><ul>
-    <li>6 unwaxed lemons/li>
+    <li>6 unwaxed lemons</li>
     <li>16 tbsp flaky sea salt</li>
     <li>4 bay leaves</li>
     <li>1/2 tsp peppercorns</li>
